--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ paho-mqtt = "0.9"
 clap = "2.33"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
+openssl = "0.10"
 
 [[bin]]
 name = "mqttterminal-server"
