--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "mqtterminal-server"
 version = "0.1.0"
 authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
 edition = "2018"
+description = "Server side for MQTTerminal project - Run shell commands asynchronously over MQTT with very low setup"
+homepage = "https://github.com/gabriel-milan/mqtterminal-server"
+repository = "https://github.com/gabriel-milan/mqtterminal-server"
+license="GPL-3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
