--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ chrono = "0.4"
 openssl = "0.10"
 
 [[bin]]
-name = "mqttterminal-server"
+name = "mqtterminal-server"
 path = "src/main.rs"
 
 [features]
